--- a/src/main/resources/templates/Registration.html
+++ b/src/main/resources/templates/Registration.html
@@ -9,14 +9,16 @@
 <body>
 
 <header></header>
-<form th:action="/registration">
-<label>
-    <input type="text" placeholder="E-mail" name="email">
-</label>
-<label>
-    <input type="password" placeholder="Password" name="password">
-</label>
-    <button type="submit"></button>
+<form th:action="@{/registration}" method="post">
+    <label>
+        <input type="text" placeholder="E-mail" name="email">
+    </label>
+    <br><br>
+    <label>
+        <input type="password" placeholder="Password" name="password">
+    </label>
+    <br><br>
+    <button type="submit">Create Account</button>
 </form>
 <footer></footer>
 
