--- a/src/main/resources/templates/enterPage.html
+++ b/src/main/resources/templates/enterPage.html
@@ -7,15 +7,19 @@
           integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
-<form th:method="post" th:action="@{/enter}" th:object="${newUser}">
+<form th:method="post" th:action="@{/enter/save}" th:object="${newUser}">
     <label>
         <input type="email" placeholder="E-mail" name="email" th:field="*{email}">
+        <p th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Incorrect data</p>
     </label>
+    <br><br>
     <label>
         <input type="password" placeholder="Password" name="password" th:field="*{password}">
+        <p th:if="${#fields.hasErrors('password')}" th:errors="*{password}">Incorrect data</p>
     </label>
+    <br><br>
     <button type="submit">Submit</button>
-    <a th:href = "@{/registration}">Still not registered?</a>
+    <a th:href="@{/registration}">Still not registered?</a>
 </form>
 <footer></footer>
 
