--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -9,13 +9,15 @@
 <body>
 
 <header></header>
-<form th:method="post" th:action="@{/enter}" th:object="${newUser}">
+<form th:method="post" th:action="@{/registration/save}" th:object="${newUser}">
     <label>
         <input type="text" placeholder="E-mail" name="email" th:field="*{email}">
+        <p th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Incorrect data</p>
     </label>
     <br><br>
     <label>
         <input type="password" placeholder="Password" name="password" th:field="*{password}">
+        <p th:if="${#fields.hasErrors('password')}" th:errors="*{password}">Incorrect data</p>
     </label>
     <br><br>
     <button type="submit">Create Account</button>
