--- a/src/main/resources/templates/adminPage.html
+++ b/src/main/resources/templates/adminPage.html
@@ -12,17 +12,17 @@
     <thead>
     <tr>
       <th scope="col">#</th>
-      <th scope="col">Название</th>
-      <th scope="col">Описание</th>
-      <th scope="col">Цена</th>
+      <th scope="col">Email</th>
+      <th scope="col">Логин</th>
+      <th scope="col">Пароль</th>
     </tr>
     </thead>
     <tbody th:each="user, count: ${users}">
     <tr>
       <th scope="row" th:text="${count.count}"></th>
+      <td th:text="${user.getEmail()}"/>
       <td th:text="${user.getUsername()}"/>
       <td th:text="${user.getPassword()}"/>
-      <td th:text="${user.getEmail()}"/>
     </tr>
     </tbody>
   </table>
@@ -56,7 +56,7 @@
 <form th:method="post" th:action="@{/admin/save}" th:object="${newProduct}">
 <div class="addProduct">
   <label>
-    <input type="text" name="productName" placeholder="Наименование товара" th:field="*{productTitle}">
+    <input type="text" name="productTitle" placeholder="Наименование товара" th:field="*{productTitle}">
     <p th:if="${#fields.hasErrors('productTitle')}" th:errors="*{productTitle}">Incorrect data</p>
   </label>
   <label>
