already exists logic

--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -25,6 +25,9 @@
         <p th:if="${check} == false">
             Passwords are not match
         </p>
+        <p th:if="${isExists} == true">
+            User already exists
+        </p>
     </label>
     <br><br>
     <button type="submit">Create Account</button>
