--- a/src/main/resources/templates/adminPage.html
+++ b/src/main/resources/templates/adminPage.html
@@ -3,93 +3,104 @@
 <head>
     <meta charset="UTF-8">
     <title>Admin</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
 <div class="users">
-  <table class="table">
-    <thead>
-    <tr>
-      <th scope="col">№</th>
-      <th scope="col">Email</th>
-      <th scope="col">Логин</th>
-      <th scope="col">Пароль</th>
-      <th scope="col">Удалить</th>
-    </tr>
-    </thead>
-    <tbody th:each="user, count: ${users}">
-    <tr>
-      <th scope="row" th:text="${count.count}"></th>
-      <td th:text="${user.email}"/>
-      <td th:text="${user.username}"/>
-      <td th:text="${user.password}"/>
-      <td>
-      <form th:action="@{admin/deleteCustomer/{idCustomer}(idCustomer = ${user.getId()})}" th:method="post">
-      <button type="submit">Удалить</button>
-      </form></td>
-    </tr>
-    </tbody>
-  </table>
+    <table class="table">
+        <thead>
+        <tr>
+            <th scope="col">№</th>
+            <th scope="col">Email</th>
+            <th scope="col">Логин</th>
+            <th scope="col">Пароль</th>
+            <th scope="col">Удалить</th>
+        </tr>
+        </thead>
+        <tbody th:each="user, count: ${users}">
+        <tr>
+            <th scope="row" th:text="${count.count}"></th>
+            <td th:text="${user.email}"/>
+            <td th:text="${user.username}"/>
+            <td th:text="${user.password}"/>
+            <td>
+                <form th:action="@{admin/deleteCustomer/{idCustomer}(idCustomer = ${user.getId()})}" th:method="post">
+                    <button type="submit">Удалить</button>
+                </form>
+            </td>
+        </tr>
+        </tbody>
+    </table>
 
 
 </div>
 
 
 <div class="products">
-  <table class="table">
-    <thead>
-    <tr>
-      <th scope="col">№</th>
-      <th scope="col">Название</th>
-      <th scope="col">Описание</th>
-      <th scope="col">Цена</th>
-      <th scope="col">Обновить</th>
-      <th scope="col">Удалить</th>
-    </tr>
-    </thead>
-    <tbody th:each="product, count: ${products}">
-    <tr>
-      <form th:action="@{/admin/updateProduct/{idNew}(idNew = ${product.getId()})}" method="post">
-      <th scope="row" th:text="${count.count}"></th>
-      <td><label>
-        <input th:value="*{product.getProductTitle()}" name = "productTitle">
-      </label></td>
-      <td><label>
-        <input th:value="${product.getDescription()}" name = "description">
-      </label></td>
-      <td><label>
-        <input th:value="${product.getPrice()}" name = "price">
-      </label></td>
-      <td><button type="submit">Обновить</button> </td>
-      </form>
-      <td>
-        <form th:action="@{admin/deleteProduct/{idProduct}(idProduct = ${product.id})}" th:method="post">
-           <button type="submit">Удалить</button>
-        </form>
-      </td>
-    </tr>
-    </tbody>
-  </table>
+    <form th:action="@{/admin/search}" method="get">
+        <input type="text" name="search">
+        <button type="submit">Найти</button>
+    </form>
+    <form th:action="@{/admin}" method="post">
+        <button type="submit">Сбросить</button>
+    </form>
+
+    <table class="table">
+        <thead>
+        <tr>
+            <th scope="col">№</th>
+            <th scope="col">Название</th>
+            <th scope="col">Описание</th>
+            <th scope="col">Цена</th>
+            <th scope="col">Обновить</th>
+            <th scope="col">Удалить</th>
+        </tr>
+        </thead>
+        <tbody th:each="product, count: ${products}">
+        <tr>
+            <form th:action="@{/admin/updateProduct/{idNew}(idNew = ${product.getId()})}" method="post">
+                <th scope="row" th:text="${count.count}"></th>
+                <td><label>
+                    <input th:value="*{product.getProductTitle()}" name="productTitle">
+                </label></td>
+                <td><label>
+                    <input th:value="${product.getDescription()}" name="description">
+                </label></td>
+                <td><label>
+                    <input th:value="${product.getPrice()}" name="price">
+                </label></td>
+                <td>
+                    <button type="submit">Обновить</button>
+                </td>
+            </form>
+            <td>
+                <form th:action="@{admin/deleteProduct/{idProduct}(idProduct = ${product.id})}" th:method="post">
+                    <button type="submit">Удалить</button>
+                </form>
+            </td>
+        </tr>
+        </tbody>
+    </table>
 </div>
 
 
 <form th:method="post" th:action="@{/admin/save}" th:object="${newProduct}">
-<div class="addProduct">
-  <label>
-    <input type="text" name="productTitle" placeholder="Наименование товара" th:field="*{productTitle}">
-    <p th:if="${#fields.hasErrors('productTitle')}" th:errors="*{productTitle}">Incorrect data</p>
-  </label>
-  <label>
-    <input type="text" name="productDescr" placeholder="Описание товара" th:field="*{description}">
-    <p th:if="${#fields.hasErrors('description')}" th:errors="*{description}">Incorrect data</p>
-  </label>
-  <label>
-    <input type="text" name="productPrice" placeholder="Цена товара" th:field="*{price}">
-    <p th:if="${#fields.hasErrors('price')}" th:errors="*{price}">Incorrect data</p>
-  </label>
-  <button type="submit">Добавить</button>
-</div>
+    <div class="addProduct">
+        <label>
+            <input type="text" name="productTitle" placeholder="Наименование товара" th:field="*{productTitle}">
+            <p th:if="${#fields.hasErrors('productTitle')}" th:errors="*{productTitle}">Incorrect data</p>
+        </label>
+        <label>
+            <input type="text" name="productDescr" placeholder="Описание товара" th:field="*{description}">
+            <p th:if="${#fields.hasErrors('description')}" th:errors="*{description}">Incorrect data</p>
+        </label>
+        <label>
+            <input type="text" name="productPrice" placeholder="Цена товара" th:field="*{price}">
+            <p th:if="${#fields.hasErrors('price')}" th:errors="*{price}">Incorrect data</p>
+        </label>
+        <button type="submit">Добавить</button>
+    </div>
 </form>
 
 
