--- a/src/main/resources/templates/adminPage.html
+++ b/src/main/resources/templates/adminPage.html
@@ -52,6 +52,7 @@
             <th scope="col">№</th>
             <th scope="col">Название</th>
             <th scope="col">Описание</th>
+            <th scope="col">Кол-во</th>
             <th scope="col">Цена
       <form th:action="@{/admin/order}" th:method="post">
       <button type="submit" name="decreasing" value="decreasing">↓</button>
@@ -71,6 +72,9 @@
                 </label></td>
                 <td><label>
                     <input th:value="${product.description}" name="description">
+                </label></td>
+                <td><label>
+                    <input th:value="${product.count}" name="count">
                 </label></td>
                 <td><label>
                     <input th:value="${product.price}" name="price">
@@ -99,6 +103,10 @@
         <label>
             <input type="text" name="productDescr" placeholder="Описание товара" th:field="*{description}">
             <p th:if="${#fields.hasErrors('description')}" th:errors="*{description}">Incorrect data</p>
+        </label>
+        <label>
+            <input type="text" name="countProduct" placeholder="Кол-во товара" th:field="*{count}">
+            <p th:if="${#fields.hasErrors('count')}" th:errors="*{count}">Incorrect data</p>
         </label>
         <label>
             <input type="text" name="productPrice" placeholder="Цена товара" th:field="*{price}">
