show info thymeleaf

--- a/src/main/resources/templates/cartPage.html
+++ b/src/main/resources/templates/cartPage.html
@@ -21,10 +21,10 @@
                                 <div class="d-flex justify-content-between align-items-center mb-4">
                                     <div>
                                         <p class="mb-1">Shopping cart</p>
-                                        <p class="mb-0">You have <p th:text="${products.size()}"></p> items in your cart</p>
+                                        <p th:text="'You have ' + ${products.size()} + ' items in your cart'"/>
                                     </div>
                                     <div>
-                                        <p class="mb-0"><span class="text-muted">Sort by:</span> <a href="#" class="text-body">price
+                                        <p class="mb-0"><span class="text-muted">Sort by:</span> <a th:href="@{/store/cart/sort}" class="text-body">price
                                             <i class="fas fa-angle-down mt-1"></i></a></p>
                                     </div>
                                 </div>
@@ -43,10 +43,10 @@
                                             </div>
                                             <div class="d-flex flex-row align-items-center">
                                                 <div style="width: 50px;">
-                                                    <h5 class="fw-normal mb-0" >1 COUNT TO DO</h5>
+                                                    <h5 class="fw-normal mb-0" th:text="${product.count}">{</h5>
                                                 </div>
                                                 <div style="width: 80px;">
-                                                    <h5 class="mb-0" th:text="${product.price}"></h5>
+                                                    <h5 class="mb-0" th:text="'$' + ${product.price} * ${product.count}"></h5>
                                                 </div>
                                                 <a href="#" style="color: #cecece;"><i class="fas fa-trash-alt"></i></a>
                                             </div>
@@ -108,14 +108,11 @@
                                                     </div>
                                                 </div>
                                             </div>
-
                                         </form>
-
                                         <hr class="my-4">
-
                                         <div class="d-flex justify-content-between">
                                             <p class="mb-2">Subtotal</p>
-                                            <p class="mb-2">$4798.00</p>
+                                            <p class="mb-2" th:text="'$' + ${totalPurchase}"></p>
                                         </div>
 
                                         <div class="d-flex justify-content-between">
@@ -125,12 +122,12 @@
 
                                         <div class="d-flex justify-content-between mb-4">
                                             <p class="mb-2">Total(Incl. taxes)</p>
-                                            <p class="mb-2">$4818.00</p>
+                                            <p class="mb-2" th:text="'$' + (${totalPurchase} + 20)"></p>
                                         </div>
 
                                         <button type="button" class="btn btn-info btn-block btn-lg">
                                             <div class="d-flex justify-content-between">
-                                                <span>$4818.00</span>
+                                                <span th:text="'$' + (${totalPurchase} + 20)"></span>
                                                 <span>Checkout <i class="fas fa-long-arrow-alt-right ms-2"></i></span>
                                             </div>
                                         </button>
