--- a/src/main/resources/templates/cartPage.html
+++ b/src/main/resources/templates/cartPage.html
@@ -15,7 +15,7 @@
                     <div class="card-body p-4">
                         <div class="row">
                             <div class="col-lg-7">
-                                <h5 class="mb-3"><a href="#" class="text-body"><i
+                                <h5 class="mb-3"><a th:href="@{/store}" class="text-body"><i
                                         class="fas fa-long-arrow-alt-left me-2"></i>Continue shopping</a></h5>
                                 <hr>
                                 <div class="d-flex justify-content-between align-items-center mb-4">
@@ -37,7 +37,7 @@
                                                     <p>SOME IMG</p>
                                                 </div>
                                                 <div class="ms-3">
-                                                    <h5 th:text="*{product.productTitle}"></h5>
+                                                    <h5 th:text="${product.productTitle}"></h5>
                                                     <p class="small mb-0" th:text="${product.description}"></p>
                                                 </div>
                                             </div>
@@ -48,7 +48,9 @@
                                                 <div style="width: 80px;">
                                                     <h5 class="mb-0" th:text="'$' + ${product.price} * ${product.count}"></h5>
                                                 </div>
-                                                <a href="#" style="color: #cecece;"><i class="fas fa-trash-alt"></i></a>
+                                                <form th:action="@{/store/cart/{id}/remove(id = ${product.id})}" th:method="post">
+                                                     <button type="submit" class="btn btn-primary">Remove</button>
+                                                </form>
                                             </div>
                                         </div>
                                     </div>
@@ -117,17 +119,17 @@
 
                                         <div class="d-flex justify-content-between">
                                             <p class="mb-2">Shipping</p>
-                                            <p class="mb-2">$20.00</p>
+                                            <p class="mb-2" th:text="'$' + ${totalPurchase} * 0.2"></p>
                                         </div>
 
                                         <div class="d-flex justify-content-between mb-4">
                                             <p class="mb-2">Total(Incl. taxes)</p>
-                                            <p class="mb-2" th:text="'$' + (${totalPurchase} + 20)"></p>
+                                            <p class="mb-2" th:text="'$' + (${totalPurchase} + ${totalPurchase} * 0.2)"></p>
                                         </div>
 
                                         <button type="button" class="btn btn-info btn-block btn-lg">
                                             <div class="d-flex justify-content-between">
-                                                <span th:text="'$' + (${totalPurchase} + 20)"></span>
+                                                <span th:text="'$' + (${totalPurchase} + ${totalPurchase} * 0.2)"></span>
                                                 <span>Checkout <i class="fas fa-long-arrow-alt-right ms-2"></i></span>
                                             </div>
                                         </button>
