--- a/src/main/resources/templates/storePage.html
+++ b/src/main/resources/templates/storePage.html
@@ -7,21 +7,27 @@
           integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
-    <header>
-        <div class="cart"><a th:href="@{/store/cart}">Img</a></div>
-    </header>
-    <form th:method="post" th:action="@{/store/addToCart}" th:object="${newProduct}">
-    <div class="card" style="width: 18rem;">
-        <img src="..." class="card-img-top" alt="...">
-        <div class="card-body">
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <button type="submit">В корзину</button>
+<header>
+    <div class="cart"><a th:href="@{/store/cart}">Img</a></div>
+</header>
+<div class="each" th:each="product: ${products}">
+    <form th:method="post" th:action="@{/store/addToCart/{idProduct}(idProduct = ${product.getId()})}">
+        <div class="card" style="width: 18rem;">
+            <img th:src="@{'data:image/png;base64,'+${product.getImageFromBytes()}}" class="card-img-top" alt="...">
+            <div class="card-body">
+                <p class="card-text" th:text="${product.productTitle}"></p>
+                <p class="card-text" th:text="${product.description}"></p>
+                <p class="card-text" th:text="${product.price}"></p>
+                <input id="form1" min="0" name="quantity" value="1" type="number"
+                       class="form-control form-control-sm" />
+                <button type="submit">В корзину</button>
+            </div>
         </div>
-    </div>
     </form>
-    <footer></footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-            crossorigin="anonymous"></script>
+</div>
+<footer></footer>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
 </body>
 </html>
