count field added

--- a/src/main/resources/templates/storePage.html
+++ b/src/main/resources/templates/storePage.html
@@ -18,6 +18,7 @@
                 <p class="card-text" th:text="${product.productTitle}"></p>
                 <p class="card-text" th:text="${product.description}"></p>
                 <p class="card-text" th:text="${product.price}"></p>
+                <p class="card-text" th:text="${product.count}"></p>
                 <input id="form1" min="0" name="quantity" value="1" type="number"
                        class="form-control form-control-sm" />
                 <button type="submit">В корзину</button>
