--- a/src/main/resources/templates/storePage.html
+++ b/src/main/resources/templates/storePage.html
@@ -5,28 +5,84 @@
     <title>Title</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="/style/styles.css" rel="stylesheet"/>
 </head>
 <body>
-<header>
-    <div class="cart"><a th:href="@{/store/cart}">Img</a></div>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container px-4 px-lg-5">
+        <a class="navbar-brand" >Start Bootstrap</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span
+                class="navbar-toggler-icon"></span></button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
+                <li class="nav-item"><a class="nav-link active" aria-current="page">Home</a></li>
+                <li class="nav-item"><a class="nav-link" >About</a></li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button"
+                       data-bs-toggle="dropdown" aria-expanded="false">Shop</a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" >All Products</a></li>
+                        <li>
+                            <hr class="dropdown-divider"/>
+                        </li>
+                        <li><a class="dropdown-item" >Popular Items</a></li>
+                        <li><a class="dropdown-item" >New Arrivals</a></li>
+                    </ul>
+                </li>
+            </ul>
+            <form class="d-flex">
+                <button class="btn btn-outline-dark" type="submit">
+                    <i class="bi-cart-fill me-1"></i>
+                    <a th:href="@{/store/cart}">Cart</a>
+                    <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
+                </button>
+            </form>
+        </div>
+    </div>
+</nav>
+<header class="bg-dark py-5">
+    <div class="container px-4 px-lg-5 my-5">
+        <div class="text-center text-white">
+            <h1 class="display-4 fw-bolder">Application Duo</h1>
+            <p class="lead fw-normal text-white-50 mb-0">Testing it with Hehe products</p>
+        </div>
+    </div>
 </header>
-<div class="each" th:each="product: ${products}">
-    <form th:method="post" th:action="@{/store/addToCart/{idProduct}(idProduct = ${product.getId()})}">
-        <div class="card" style="width: 18rem;">
-            <img th:src="@{'data:image/png;base64,'+${product.getImageFromBytes()}}" class="card-img-top" alt="...">
-            <div class="card-body">
-                <p class="card-text" th:text="${product.productTitle}"></p>
-                <p class="card-text" th:text="${product.description}"></p>
-                <p class="card-text" th:text="${product.price}"></p>
-                <p class="card-text" th:text="${product.count}"></p>
-                <input id="form1" min="0" name="quantity" value="1" type="number"
-                       class="form-control form-control-sm" />
-                <button type="submit">В корзину</button>
+<section class="py-5">
+    <div class="container px-4 px-lg-5 mt-5">
+        <div class="col mb-5">
+            <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4" >
+                <form th:method="post" th:action="@{/store/addToCart/{idProduct}(idProduct = ${product.getId()})}" th:each="product: ${products}">
+                    <div class="card h-100">
+                        <!-- Product image-->
+                        <img th:src="@{'data:image/png;base64,'+${product.getImageFromBytes()}}" class="card-img-top"
+                             alt="...">
+                        <!-- Product details-->
+                        <div class="card-body p-4">
+                            <div class="text-center">
+                                <!-- Product name-->
+                                <h5 class="fw-bolder"><a class="card-text" th:text="${product.productTitle}"></a></h5>
+                                <p class="card-text" th:text="${product.description}"></p>
+                                <!-- Product price-->
+                                <p class="card-text" th:text="${product.price}"></p><br>
+                                <p class="card-text" th:text="${product.count}"></p>
+                                <label for="form1">
+                                </label><input id="form1" min="0" name="quantity" value="1" type="number"
+                                                                  class="form-control form-control-sm"/>
+                            </div>
+                        </div>
+                        <!-- Product actions-->
+                        <button type="submit">В корзину</button>
+                    </div>
+                </form>
             </div>
         </div>
-    </form>
-</div>
-<footer></footer>
+    </div>
+</section>
+<footer class="py-5 bg-dark">
+    <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2023</p></div>
+</footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
