--- a/src/main/resources/templates/storePage.html
+++ b/src/main/resources/templates/storePage.html
@@ -5,7 +5,7 @@
     <title>Title</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link href="/style/styles.css" rel="stylesheet"/>
+
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -56,7 +56,7 @@
                 <form th:method="post" th:action="@{/store/addToCart/{idProduct}(idProduct = ${product.getId()})}" th:each="product: ${products}">
                     <div class="card h-100">
                         <!-- Product image-->
-                        <img th:src="@{'data:image/png;base64,'+${product.getImageFromBytes()}}" class="card-img-top"
+                        <img th:src="@{'data:image/png;base64,'+${product.getImageFromBytes()}}" class="card-img-top" style="width: 268px; height: 268px"
                              alt="...">
                         <!-- Product details-->
                         <div class="card-body p-4">
