--- a/src/main/resources/templates/loginPage.html
+++ b/src/main/resources/templates/loginPage.html
@@ -8,23 +8,67 @@
 </head>
 <body>
 <form th:method="post" th:action="@{/login/submit}" th:object="${newUser}">
-    <label>
-        <input type="email" placeholder="E-mail" name="email" th:field="*{email}">
-        <p th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Incorrect data</p>
-    </label>
-    <br><br>
-    <label>
-        <input type="password" placeholder="Password" name="password" th:field="*{password}">
-        <p th:if="${#fields.hasErrors('password')}" th:errors="*{password}">Incorrect data</p>
-    </label>
-    <br><br>
-    <button type="submit">Submit</button>
-    <a th:href="@{/registration}">Still not registered?</a>
-    <p th:if="${notFound} == false">
-        Account is not found!
-    </p>
+    <section class="vh-100" style="background-color: #8c959d;">
+        <div class="container py-5 h-100">
+            <div class="row d-flex justify-content-center align-items-center h-100">
+                <div class="col col-xl-10">
+                    <div class="card" style="border-radius: 1rem;">
+                        <div class="row g-0">
+                            <div class="col-md-6 col-lg-5 d-none d-md-block">
+                                <img src=""
+                                     alt="login form" class="img-fluid" style="border-radius: 1rem 0 0 1rem;"/>
+                            </div>
+                            <div class="col-md-6 col-lg-7 d-flex align-items-center">
+                                <div class="card-body p-4 p-lg-5 text-black">
+
+                                    <form>
+
+                                        <div class="d-flex align-items-center mb-3 pb-1">
+                                            <i class="fas fa-cubes fa-2x me-3" style="color: #ff6219;"></i>
+                                            <span class="h1 fw-bold mb-0">ApplicationDuo</span>
+                                        </div>
+
+                                        <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Sign In into your
+                                            account</h5>
+
+                                        <div class="form-outline mb-4">
+                                            <input type="email" placeholder="E-mail" name="email" th:field="*{email}">
+                                            <p th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Incorrect
+                                                data</p>
+                                        </div>
+
+                                        <div class="form-outline mb-4">
+                                            <input type="password" placeholder="Password" name="password"
+                                                   th:field="*{password}">
+                                            <p th:if="${#fields.hasErrors('password')}" th:errors="*{password}">
+                                                Incorrect data</p>
+                                        </div>
+
+                                        <div class="pt-1 mb-4">
+                                            <button class="btn btn-dark btn-lg btn-block" type="submit">Login</button>
+                                        </div>
+
+                                        <a class="small text-muted" href="#!">Forgot password?</a>
+                                        <p class="mb-5 pb-lg-2" style="color: #393f81;">Don't have an account? <a
+                                                th:href="@{/registration}"
+                                                style="color: #393f81;">Register
+                                            here</a></p>
+                                        <p th:if="${notFound} == false">
+                                            Account is not found!
+                                        </p>
+                                        <a href="#!" class="small text-muted">Terms of use.</a>
+                                        <a href="#!" class="small text-muted">Privacy policy</a>
+                                    </form>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </form>
-<footer></footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
