--- a/src/main/resources/templates/loginPage.html
+++ b/src/main/resources/templates/loginPage.html
@@ -7,7 +7,7 @@
           integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
-<form th:method="post" th:action="@{/login/submit}" th:object="${newUser}">
+<form th:method="post" th:action="@{/login}" th:object="${newUser}">
     <section class="vh-100" style="background-color: #8c959d;">
         <div class="container py-5 h-100">
             <div class="row d-flex justify-content-center align-items-center h-100">
@@ -32,8 +32,8 @@
                                             account</h5>
 
                                         <div class="form-outline mb-4">
-                                            <input type="email" placeholder="E-mail" name="email" th:field="*{email}">
-                                            <p th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Incorrect
+                                            <input type="text" placeholder="Username" name="username" th:field="*{username}">
+                                            <p th:if="${#fields.hasErrors('username')}" th:errors="*{username}">Incorrect
                                                 data</p>
                                         </div>
 
@@ -49,15 +49,11 @@
                                         </div>
 
                                         <a class="small text-muted" href="#!">Forgot password?</a>
-                                        <p class="mb-5 pb-lg-2" style="color: #393f81;">Don't have an account? <a
-                                                th:href="@{/registration}"
-                                                style="color: #393f81;">Register
-                                            here</a></p>
+                                        <p class="mb-5 pb-lg-2" style="color: #393f81;">Don't have an account?
+                                            <a th:href="@{/registration}" style="color: #393f81;">Register here</a></p>
                                         <p th:if="${notFound} == false">
                                             Account is not found!
                                         </p>
-                                        <a href="#!" class="small text-muted">Terms of use.</a>
-                                        <a href="#!" class="small text-muted">Privacy policy</a>
                                     </form>
 
                                 </div>
