--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -31,8 +31,8 @@
                                         <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Create your own account</h5>
 
                                         <div class="form-outline mb-4">
-                                            <input type="text" placeholder="E-mail" name="email" th:field="*{email}">
-                                            <p th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Incorrect
+                                            <input type="text" placeholder="Username" name="username" th:field="*{username}">
+                                            <p th:if="${#fields.hasErrors('username')}" th:errors="*{username}">Incorrect
                                                 data</p>
                                         </div>
 
@@ -61,8 +61,6 @@
                                                 th:href="@{/login}"
                                                 style="color: #393f81;">Login
                                             here</a></p>
-                                        <a href="#!" class="small text-muted">Terms of use.</a>
-                                        <a href="#!" class="small text-muted">Privacy policy</a>
                                     </form>
 
                                 </div>
